# mame

./: README.md  makefile
scripts/: genie.lua  toolchain.lua
scripts/src/: 3rdparty.lua  cpu.lua  emu.lua  main.lua  netlist.lua
scripts/src/osd/: headless.lua  headless_cfg.lua  headless_modules.lua
src/: CMakeLists.txt
src/emu/: config.cpp  emuopts.cpp  emuopts.h  machine.cpp  machine.h  save.cpp  save.h
src/frontend/mame/: mame.cpp  mame.h
src/frontend/mame/ui/: confswitch.cpp  inputmap.cpp  mainmenu.cpp  selgame.cpp  ui.cpp
src/mame/: arcade.flt  mame.lst
src/mame/misc/: cv1k.cpp
src/osd/headless/: DriverList+Private.h  driver+private.h  driver.mm  headless.mm  headlessmain.mm  options+private.h
src/osd/headless/public/: DriverList.h  driver.h  headless.h  inputenum.h  oecommon.h  options.h  osd.h
src/osd/headless/shell/: CMakeLists.txt  main.m
src/osd/modules/lib/: osdlib_headless.cpp
